<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/erg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/erg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_0"
        app:layout_constraintVertical_bias="0.761" />

    <Button
        android:id="@+id/_0"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_0"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_2" />

    <Button
        android:id="@+id/del"
        android:layout_width="73dp"
        android:layout_height="56dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/del"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_3" />

    <Button
        android:id="@+id/seperatior"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/seperator"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_1" />

    <Button
        android:id="@+id/sub"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sub"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/_1"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_4" />

    <Button
        android:id="@+id/_3"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_3"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_6" />

    <Button
        android:id="@+id/add"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multi" />

    <Button
        android:id="@+id/_2"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_5" />

    <Button
        android:id="@+id/_7"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_7"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/_9"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_9"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/div"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/div"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/_8"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_8"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/resultOutput"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/multi"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/multi"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <Button
        android:id="@+id/_6"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_6"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/multi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_9" />

    <Button
        android:id="@+id/_5"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_5"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_8" />

    <Button
        android:id="@+id/_4"
        android:layout_width="62dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_4"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/_5"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_7" />

</android.support.constraint.ConstraintLayout>